# ROS-Topics-Services-and-Actions

./: .gitignore  ASSIGNMENT2_SUMMARY_REPORT.md  README.md  chase_test.py  pose_test.py  test_simple_movement.py
bag1/: bag1_0.db3  metadata.yaml
src/: README.md
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: MoveTurtle.action
src/custom_interfaces/msg/: Time.msg
src/custom_interfaces/srv/: FindClosestTurtle.srv
src/lab03_topics/: package.xml  setup.cfg  setup.py
src/lab03_topics/lab03_topics/: listener.py  move_distance.py  print_pose.py  sphere_listener.py  sphere_publisher.py  talker.py  time_listener.py  time_publisher.py  twist_relay.py
src/lab04_services/: package.xml  setup.cfg  setup.py
src/lab04_services/lab04_services/: move_turtle_arc_client.py  move_turtle_arc_server.py  service_client.py  service_member_function.py
src/lab05_actions/: package.xml  setup.cfg  setup.py
src/lab05_actions/lab05_actions/: fibonacci_action_client.py  fibonacci_action_server.py  move_turtle_action_client.py  move_turtle_action_server.py
src/turtle_controller_assignment/: Readme.md  logs  package.xml  setup.cfg  setup.py
src/turtle_controller_assignment/launch/: assignment_launch.py
src/turtle_controller_assignment/test/: test_closest_turtle_service.py  test_movement_control.py
src/turtle_controller_assignment/turtle_controller_assignment/: auto_turtle_spawner.py  closest_turtle_client.py  closest_turtle_service.py  pen_control_client.py  turtle_collection_client.py  turtle_collection_server.py  turtle_monitor_service.py  turtle_name_manager.py  turtle_spawn_client.py
src/ur3_description/: CMakeLists.txt  README.md  package.xml
src/ur3_description/config/: gazebo_bridge.yaml  ur3_controllers.yaml  visual_parameters.yaml
src/ur3_description/launch/: ur3_gazebo.launch.py  ur3_rviz.launch.py
src/ur3_description/models/: cube.sdf  table.sdf
src/ur3_description/rviz/: ur3.rviz
src/ur3_description/scripts/: spawn_entity.py
src/ur3_description/urdf/: ur3.ros2_control.xacro  ur3.urdf.xacro  ur3_description.urdf.xacro  ur_common.xacro
src/ur3_training/: README.md  package.xml  setup.cfg  setup.py
src/ur3_training/launch/: ur3_training.launch.py
src/ur3_training/ur3_training/: joint_position_control.py  joint_trajectory_control.py
