<?xml version="1.0"?>
<package format="3">
  <name>lab03_topics</name>
  <version>0.0.1</version>
  <description>Lab 03: ROS 2 topics demo</description>
  <maintainer email="you@example.com">vlad</maintainer>
  <license>BSD</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>custom_interfaces</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

