<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://download.ros.org/schema/package_format3.xsd package_format3.xsd"?>
<package format="3">
  <name>turtle_controller_assignment</name>
  <version>0.0.0</version>
  <description>COMP9069 Assignment 1 - Turtle Control</description>
  <maintainer email="r00274535@mymtu.ie">vlad</maintainer>
  <license>TApache License 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
